trace-grapher/deploy-trace-grapher/bases/jupyter/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jupyter

spec:
  selector:
    matchLabels:
      app: jupyter
  serviceName: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jupyter
        image: jupyter/all-spark-notebook
        ports:
        - name: http-web
          containerPort: 8888
        command: [
          "start-notebook.sh",
          "--NotebookApp.allow_origin=\"*\"",
          "--NotebookApp.base_url=/jupyter",
          "--NotebookApp.password=$(JUPYTER_PASSWORD_SHA1)"
        ]
        volumeMounts:
        - name: jupyter-data
          mountPath: /home/jovyan/work
        - name: before-notebook-scripts
          mountPath: /usr/local/bin/before-notebook.d/
        - name: kubeconfig
          mountPath: /home/jovyan/.kube
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          initialDelaySeconds: 300
          tcpSocket:
            port: 8888
        resources:
          requests:
            cpu: "250m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
      volumes:
      - name: before-notebook-scripts
        configMap:
          name: before-notebook
          defaultMode: 0777
      - name: kubeconfig
        configMap:
          name: kubeconfig
  volumeClaimTemplates:
  - metadata:
      name: jupyter-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: hostpath
      resources:
        requests:
          storage: 1Gi
